@@ -22,14 +22,9 @@
 %expect 0
 
 %defines
-%error-verbose
+%define parse.error verbose
 %verbose
-%name-prefix="pp" /* recent versions want %api.prefix "pp", older cannot compile this */
-
-/* NOTE:
-   support without = was added in Bison 2.4 (released 2008-11-02, we currently use 2.3),
-   bison 3.0 (released 2013-07-25) added a warning if with = is used
-*/
+%define api.prefix {pp}
 
 %{
 #include <config.h>
